2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Accept old-style xen kernels.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/lvm.h (grub_lvm_lv): New field 'visible'.
	(grub_lvm_segment): New fields 'type', 'mirror_count' and 'mirrors'.
	(grub_lvm_mirror): New struct.
	* grub-core/disk/lvm.c (grub_lvm_checkvalue): Commented out.
	(grub_lvm_iterate): Iterate only visible volumes.
	(grub_lvm_read): Factor out to ..
	(read_lv): ... this. Support mirrors.
	(grub_lvm_read): New wrapper function.
	(grub_lvm_scan_device): Parse mirrors. Skip everything that isn't
	stripped or mirrored.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Skip vmlinux-* on x86 platforms.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (loopback): New section.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/loopback.c (GRUB_MOD_INIT): Stop documenting
	removed -p option.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (BIOS installation): New section, partly based on
	previous text in other sections.
	(Installing GRUB using grub-install): Replace BIOS discussion with a
	cross-reference.
	(Images): Likewise.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (find_partition_start)
	[HAVE_DIOCGDINFO]: Add safety checks.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_kfreebsd.in: Allow ufs.ko to be missing as it's
	per default compiled in kernel and prior to 8.0 isn't shipped at all.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): If
	real_sb->size is zero (e.g. RAID-0), get the disk size from
	real_sb->data_size instead.
	Fixes Ubuntu bug #743136.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/misc.c (grub_normal_print_device_info): Use correct
	printf clauses for printing size and start.
